# hakyll-shakespeare

./: .gitignore  LICENSE  README.md  hakyll-shakespeare.cabal
src/Hakyll/Web/: Hamlet.hs
