name:                hakyll-shakespeare
version:             0.1.0
synopsis:            Hakyll shakespeare compilers
description:         Please see README.md
homepage:            https://github.com/eliza0x/hakyll-hamlet#readme
license:             MIT
license-file:        LICENSE
author:              Eliza Calls
maintainer:          me@eliza.link
copyright:           2016 Eliza Calls.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hakyll.Web.Hamlet
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                     , containers
                     , blaze-html
                     , shakespeare
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eliza0x/hakyll-hamlet
